compiler/example/test-utils/invalid-type-datamodel/go.sum
github.com/vmware-tanzu/graph-framework-for-microservices/common-library v0.0.0-20220425104724-aada688df39f h1:+iWPOhj9Cqsp4S0o+/gZH0KztJZxY6IDzm4+Msul6kE=
github.com/vmware-tanzu/graph-framework-for-microservices/common-library v0.0.0-20220425104724-aada688df39f/go.mod h1:8u5OYwe1x3d4MrykRdsvBMAA4kuKlgSFFDdgG1DXrWE=
